A working configuration!
I had to remove the duplicated/modifed module-info.java in the sawdust.alpha/test
folder, in favour of adding the `--add-reads` to the java[c]Options in the build.
That seems to be the approach suggested by Gradle, too.

```
⚡ sbt -J--illegal-access=permit -sbt-version 1.1.3-pre-98d08039e clean test:comile sawdustAlpha/run sawdustAlpha/test:run userView/test:run
[warn] sbt version mismatch, current: 1.1.3-pre-98d08039e, in build.properties: "1.1.2", use 'reboot' to use the new value.
[info] Loading settings from dirtymoney.sbt,gpg.sbt,idea.sbt ...
[info] Loading global plugins from /Users/jz/.sbt/1.0/plugins
[info] Loading project definition from /Users/jz/code/sawdust/project
[info] Loading settings from build.sbt ...
[info] Set current project to root (in build file:/Users/jz/code/sawdust/)
[success] Total time: 0 s, completed 6 Apr. 2018, 6:34:59 pm
[error] Not a valid key: comile (similar: compile, compilers, compileOrder)
[error] test:comile
[error]            ^
/code/sawdust on topic/sbt*
⚡ sbt -J--illegal-access=permit -sbt-version 1.1.3-pre-98d08039e clean  sawdustAlpha/run sawdustAlpha/test:run userView/test:run
[warn] sbt version mismatch, current: 1.1.3-pre-98d08039e, in build.properties: "1.1.2", use 'reboot' to use the new value.
[info] Loading settings from dirtymoney.sbt,gpg.sbt,idea.sbt ...
[info] Loading global plugins from /Users/jz/.sbt/1.0/plugins
[info] Loading project definition from /Users/jz/code/sawdust/project
[info] Loading settings from build.sbt ...
[info] Set current project to root (in build file:/Users/jz/code/sawdust/)
[success] Total time: 0 s, completed 6 Apr. 2018, 6:35:12 pm
[info] Updating sawdustAlpha...
[info] Done updating.
[info] Compiling 4 Java sources to /Users/jz/code/sawdust/modules/sawdust.alpha/target/classes ...
[info] Done compiling.
WARNING: An illegal reflective access operation has occurred
WARNING: Illegal reflective access by com.google.protobuf.UnsafeUtil (file:/Users/jz/.sbt/boot/scal